fix canvas-2 body overflow

--- a/Canvas-animation-2/style.css
+++ b/Canvas-animation-2/style.css
@@ -19,6 +19,7 @@ body{
         -ms-flex-pack: center;
             justify-content: center;
     background-color: #eeeeee;
+    overflow: hidden;
 }
 #canvas {
     border: 2px solid rgb(131, 175, 155);
